Move exercise solution to separate page.

--- a/solutions/ch01_01.md
+++ b/solutions/ch01_01.md
@@ -1,6 +1,6 @@
 ---
 layout: exercises
-title:  "Chapter 1: More Exercises"
+title:  "Chapter 1: Solutions"
 ---
 
 ## Chapter 1 - More With Less
@@ -14,20 +14,12 @@ The goal for your first exercise is to write a script that reverses text. Here's
 * Call `chomp` on the user's string to remove the newline character from the end.
 * Call `reverse` on the string, and display the result.
 
-When you're ready, have a look at [the solution](/solutions/ch01_01.html).
-
-### Exercise 2: IRB Session
-
-Launch `irb` from your terminal, and try the following expressions:
+### Solution
 
 {% highlight ruby %}
-> my_string = "ruby is so cool"
-> my_string.methods
-> my_string.reverse.upcase
-> my_string.next
-> my_string.insert(11, "very, very ")
-> "Rolling a die... we got #{ rand(1..6) }"
-> "There are #{ 60 * 60 } seconds in an hour."
-> 42.to_s
-> "42".to_i
+puts "Enter a phrase:"
+input = gets
+phrase = input.chomp
+puts "Here is your phrase, backwards:"
+puts phrase.reverse
 {% endhighlight %}
