Add explanation of IRB exercise.

--- a/exercises/ch01.md
+++ b/exercises/ch01.md
@@ -23,11 +23,13 @@ Launch `irb` from your terminal, and try the following expressions:
 {% highlight ruby %}
 > my_string = "ruby is so cool"
 > my_string.methods
-> my_string.reverse.upcase
 > my_string.next
+> my_string.reverse.upcase
 > my_string.insert(11, "very, very ")
 > "Rolling a die... we got #{ rand(1..6) }"
 > "There are #{ 60 * 60 } seconds in an hour."
 > 42.to_s
 > "42".to_i
 {% endhighlight %}
+
+After you try them out, you can see [an explanation of the results](/solutions/ch01_02.html).
