Add class exercise.

--- a/exercises/ch02.md
+++ b/exercises/ch02.md
@@ -32,3 +32,11 @@ Now, create an `image` method that returns an `img` tag as a string. It should t
 After defining the `paragraph` and `image` methods, try calling them a few times to output some HTML, with image file names and text of your choosing.
 
 When you're ready, have a look at [the solution](/solutions/ch02_01.html).
+
+### Exercise 2: Rectangle class
+
+Create a `Rectangle` class. Add `width` and `height` attributes, with methods to read and write each. (There's a shortcut for doing all that, so if you know the shortcut, by all means use it!) Then add an `area` method that returns the area of the rectangle. (You can calculate this by multiplying the width attribute by the height attribute.)
+
+For bonus points, modify both the attribute writer methods to raise an error if a negative value is provided.
+
+When you're ready, have a look at [the solution](/solutions/ch02_02.html).
