--- a/exercises/ch02.md
+++ b/exercises/ch02.md
@@ -37,6 +37,10 @@ When you're ready, have a look at [the solution](/solutions/ch02_01.html).
 
 Create a `Rectangle` class. Add `width` and `height` attributes, with methods to read and write each. (There's a shortcut for doing all that, so if you know the shortcut, by all means use it!) Then add an `area` method that returns the area of the rectangle. (You can calculate this by multiplying the width attribute by the height attribute.)
 
-For bonus points, modify both the attribute writer methods to raise an error if a negative value is provided.
-
 When you're ready, have a look at [the solution](/solutions/ch02_02.html).
+
+### Exercise 3: Validation
+
+In your `Rectangle` class from the previous exercise, modify both the `width=` and `height=` attribute writer methods to raise an error if a negative value is provided.
+
+When you're ready, have a look at [the solution](/solutions/ch02_03.html).
