Add "super" exercise.

--- a/exercises/ch03.md
+++ b/exercises/ch03.md
@@ -36,3 +36,30 @@ end
 Your next task is to create a subclass of `Rectangle`, named `Square`. `Square` should override the `width=` method to set both the width and height to the given value when called. It should do the same with the `height=` method. (Don't worry about checking whether the values are negative.) All other methods should be inherited from `Rectangle`. The `area` method should work without any need to override it.
 
 When you're ready, have a look at [the solution](/solutions/ch03_01.html).
+
+### Exercise 2: Cupcakes
+
+We have a `Confection` class representing baked desserts below. Your job is to create a new subclass of `Confection`, named `Cupcake`. Cupcakes need to be baked just like other confections, but they also need to be frosted afterward.
+
+Write a `prepare` method for your `Cupcake` class that prints `"Baking at 350 degrees for 25 minutes."`, and *then* prints `"Applying frosting."` Do this *without* duplicating the `puts` line from the `prepare` method of the `Confection` class.
+
+{% highlight ruby %}
+class Confection
+  def prepare
+    # Don't duplicate this line in the subclass!
+    puts "Baking at 350 degrees for 25 minutes."
+  end
+end
+
+# CREATE YOUR Cupcake SUBCLASS HERE!
+
+# The below code should output the following
+# 2 lines of text:
+#
+# Baking at 350 degrees for 25 minutes.
+# Applying frosting.
+cupcake = Cupcake.new
+cupcake.prepare
+{% endhighlight %}
+
+When you're ready, have a look at [the solution](/solutions/ch03_02.html).
