Add IRB exercise for "each".

--- a/exercises/ch05.md
+++ b/exercises/ch05.md
@@ -54,3 +54,19 @@ Some hints:
 * You'll need to pass the two method parameters as arguments to `yield`, so that they're passed on to the block.
 
 When you're ready, have a look at [the solution](/solutions/ch05_02.html).
+
+### Exercise 3: IRB session
+
+Launch `irb` from your terminal, and try the following expressions:
+
+{% highlight ruby %}
+> numbers = [3, 29, 5, 12, 18]
+> numbers.each { |number| puts number * number }
+> numbers.each { |number| puts number.odd? }
+> numbers.each { |number| puts "$" * number }
+> strings = ["I", "ma", "a", "ybuR", "retsam"]
+> strings.each { |string| puts string.reverse }
+> strings.each { |string| puts string.length }
+{% endhighlight %}
+
+After you try them out, you can see [an explanation of the results](/solutions/ch05_03.html).
