--- a/exercises/ch08.md
+++ b/exercises/ch08.md
@@ -7,7 +7,7 @@ title:  "Chapter 8: More Exercises"
 
 ### Exercise 1: Softball team
 
-Joe Walsh is having a bad day. He couldn't convince the newest employee, Lisa Wagner, to join the company softball team, so he had to draft the team mascot to play for tonight's game instead. And *now* his script to print the company roster is broken.
+Joe Walsh is having a bad day. He couldn't convince the newest employee, Lisa Wagner, to join the company softball team, so he had to draft the team mascot to play for tonight's game instead. And *now* his script to print the company roster is broken, too.
 
 Here's the script:
 
