--- a/solutions/ch08_01.md
+++ b/solutions/ch08_01.md
@@ -7,7 +7,7 @@ title:  "Chapter 8: More Exercises"
 
 ### Exercise 1: Softball team
 
-Joe Walsh is having a bad day. He couldn't convince the newest employee, Lisa Wagner, to join the company softball team, so he had to draft the team mascot to play for tonight's game instead. And *now* his script to print the company roster is broken.
+Joe Walsh is having a bad day. He couldn't convince the newest employee, Lisa Wagner, to join the company softball team, so he had to draft the team mascot to play for tonight's game instead. And *now* his program to print the company roster is broken.
 
 Here's the problem: Joe thought he was *copying* the array in the `staff` variable to the `softball_team` variable. But actually, he just copied a *reference* to the array - he aliased it. So when he added elements to `staff` and `softball_team`, they both ended up on the *same* array!
 
