Add named parameters exercise.

--- a/exercises/ch1415.md
+++ b/exercises/ch1415.md
@@ -100,3 +100,10 @@ You'll need to use a regular embedding tag with the `each` method to process eac
 {% endhighlight %}
 
 When you're ready, have a look at [our solution](/solutions/ch1415_02.html).
+
+
+### Exercise 3: Named parameters
+
+Take your solution to Exercise 1, and convert the `/roll/4`, `/roll/6`, and `/roll/20` routes to a single route that uses a named parameter for the number of sides. (You'll need to convert the parameter from a string to an integer before passing it to the `roll_die` method.)
+
+When you're ready, have a look at [our solution](/solutions/ch1415_03.html).
