Add chapter 1 exercises

--- a/exercises/ch01.md
+++ b/exercises/ch01.md
@@ -3,33 +3,59 @@ layout: exercises
 title:  "Chapter 1: More Exercises"
 ---
 
-## Chapter 1 - More With Less
+## Chapter 1 - Syntax Basics
 
-### Exercise 1: Reverse-o-Matic
+### Exercise 1: Fill in the Blanks
 
-The goal for your first exercise is to write a script that reverses text. Here's what it should do:
+The program below should take a number of cans of food and calculate their total weight. It should declare a `count` variable with the number of cans, and a `unitWeight` variable with the amount (in kilograms) that each can weighs. It should then multiply `count` by `unitWeight`, and assign the result to a new `totalWeight` variable. Finally, it should print the number of cans and their total weight.
 
-* Prompt the user to type a phrase and press Enter.
-* Use the `gets` method to read the string the user entered.
-* Call `chomp` on the user's string to remove the newline character from the end.
-* Call `reverse` on the string, and display the result.
+Fill in the blanks in the program so that it will run and produce the specified output. Note that `count` will have a type of `int`, but `unitWeight` will have a type of `float64`, so you'll need to do a conversion before you can multiply the two together.
+
+{% highlight go %}
+_______ main
+
+______ "fmt"
+
+____ main() {
+    ___ count int = 20
+    __________ := 0.4
+    totalWeight := _______(count) * unitWeight
+    fmt.Println(count, "cans weigh", totalWeight, "kilograms")
+}
+{% endhighlight %}
+
+Output:
+
+``` text
+20 cans weigh 8 kilograms
+```
 
 When you're ready, have a look at [the solution](/solutions/ch01_01.html).
 
-### Exercise 2: IRB Session
+### Exercise 2: Code Rework
 
-Launch `irb` from your terminal, and try the following expressions:
+Several of the variable names used in this example break Go naming conventions. The code is also somewhat longer than it needs to be. See if you can modify so that it's shorter and follows conventions better, but still produces the same output.
 
-{% highlight ruby %}
-> my_string = "ruby is so cool"
-> my_string.methods
-> my_string.next
-> my_string.reverse.upcase
-> my_string.insert(11, "very, very ")
-> "Rolling a die... we got #{ rand(1..6) }"
-> "There are #{ 60 * 60 } seconds in an hour."
-> 42.to_s
-> "42".to_i
+{% highlight go %}
+package main
+
+import (
+	"fmt"
+)
+
+func main() {
+	var pebbleweight float64 = 0.1
+	var rockweight float64 = 1.2
+	var boulderweight float64 = 502.4
+	var total_weight float64 = pebbleweight + rockweight + boulderweight
+	fmt.Println(total_weight)
+}
 {% endhighlight %}
 
-After you try them out, you can see [an explanation of the results](/solutions/ch01_02.html).
+Output:
+
+``` text
+503.7
+```
+
+When you're ready, have a look at [the solution](/solutions/ch01_02.html).
