--- a/solutions/ch01_01.md
+++ b/solutions/ch01_01.md
@@ -3,23 +3,31 @@ layout: exercises
 title:  "Chapter 1: Solutions"
 ---
 
-## Chapter 1 - More With Less
+## Chapter 1 - Syntax Basics
 
-### Exercise 1: Reverse-o-Matic
+### Exercise 1: Fill in the Blanks
 
-The goal for your first exercise is to write a script that reverses text. Here's what it should do:
+The program below should take a number of cans of food and calculate their total weight. It should declare a `count` variable with the number of cans, and a `unitWeight` variable with the amount (in kilograms) that each can weighs. It should then multiply `count` by `unitWeight`, and assign the result to a new `totalWeight` variable. Finally, it should print the number of cans and their total weight.
 
-* Prompt the user to type a phrase and press Enter.
-* Use the `gets` method to read the string the user entered.
-* Call `chomp` on the user's string to remove the newline character from the end.
-* Call `reverse` on the string, and display the result.
+Fill in the blanks in the program so that it will run and produce the specified output. Note that `count` will have a type of `int`, but `unitWeight` will have a type of `float64`, so you'll need to do a conversion before you can multiply the two together.
 
 ### Solution
 
-{% highlight ruby %}
-puts "Enter a phrase:"
-input = gets
-phrase = input.chomp
-puts "Here is your phrase, backwards:"
-puts phrase.reverse
+{% highlight go %}
+package main
+
+import "fmt"
+
+func main() {
+    var count int = 20
+    unitWeight := 0.4
+    totalWeight := float64(count) * unitWeight
+    fmt.Println(count, "cans weigh", totalWeight, "kilograms")
+}
 {% endhighlight %}
+
+Output:
+
+``` text
+20 cans weigh 8 kilograms
+```
