Finish ch02 exercises

--- a/exercises/ch02.md
+++ b/exercises/ch02.md
@@ -32,7 +32,7 @@ func main() {
 	
 	// YOUR CODE HERE: Call the "WriteRune" method on
 	// "builder" 3 times, once with the rune 'a', once
-	// with the rune 'b', and again with 'c'.
+	// with the rune 'b', and a third time with 'c'.
 	
 	// YOUR CODE HERE: Call the "WriteString" method on
 	// "builder" once, with the string "defg".
@@ -52,4 +52,134 @@ abcdefg
 
 When you're ready, have a look at [the solution](/solutions/ch02_01.html).
 
-### Exercise 2: Coming Soon!
+### Exercise 2: `if` Statements
+
+We're writing a program that asks the user for a racer's name and the position they finished the race in, and prints out what type of medal they should get.
+
+Complete the code sample below. The final call to `fmt.Println` at the bottom includes a variable that you'll need to declare and assign a value to. There are comments in the sample showing where to insert your code, and explaining what it should do.
+
+### Solution
+
+{% highlight go %}
+package main
+
+import (
+	"bufio"
+	"fmt"
+	"log"
+	"os"
+	"strconv"
+	"strings"
+)
+
+func main() {
+	reader := bufio.NewReader(os.Stdin)
+
+	fmt.Print("Enter racer name: ")
+	name, err := reader.ReadString('\n')
+	if err != nil {
+		log.Fatal(err)
+	}
+	name = strings.TrimSpace(name)
+
+	fmt.Print("Enter racer rank: ")
+	input, err := reader.ReadString('\n')
+	if err != nil {
+		log.Fatal(err)
+	}
+	input = strings.TrimSpace(input)
+	rank, err := strconv.ParseInt(input, 10, 64)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	// YOUR CODE HERE: Write some code that looks at the
+	// "rank" variable and sets the "medal" variable to an
+	// appropriate string. If "rank" is 1, "medal" should
+	// be set to "gold". If "rank" is 2, "medal" should be
+	// "silver". A rank of 3 should get a "bronze" medal,
+	// and any other rank should get a "participant" medal.
+
+	fmt.Println(name, "gets a", medal, "medal!")
+}
+{% endhighlight %}
+
+Example output:
+
+``` text
+Enter racer name: Noam
+Enter racer rank: 1
+Noam gets a gold medal!
+```
+
+When you're ready, have a look at [the solution](/solutions/ch02_02.html).
+
+### Exercise 3: `for` Loops
+
+Here we have a program that's meant to ask the user for a series of numbers and add them together, like this:
+
+``` text
+Enter a number: 1.1
+Add more? [Y/n] y
+Enter a number: 2.3
+Add more? [Y/n]
+Enter a number: 3.4
+Add more? [Y/n] n
+Sum is 6.8
+```
+
+But right now, the program only asks for a single number. It asks the user "Add more?", but even if they respond "y", the program ends and prints the total.
+
+``` text
+Enter a number: 12.5
+Add more? [Y/n] y
+Sum is 12.5
+```
+
+Your goal is to modify the program so that it keeps asking the user for as many additional numbers as they want. It should stop only when the user types "n" in response to the "Add more?" prompt. (Notice that the "Y" in "Y/n" is capitalized, indicating that it's the default. If the user hits Enter without typing anything, or indeed if they enter anything at all besides "n", the program should ask for another number to add.)
+
+*Hint: You'll probably want to use a `for` loop with no init or post statements to solve this.*
+
+For your first attempt, just make the program stop if the user enters "n". But then see if you can make the program stop if the user enters "n" *or* "N"!
+
+{% highlight go %}
+package main
+
+import (
+	"bufio"
+	"fmt"
+	"log"
+	"os"
+	"strconv"
+	"strings"
+)
+
+func main() {
+	reader := bufio.NewReader(os.Stdin)
+
+	var sum float64
+	more := "y"
+
+	fmt.Print("Enter a number: ")
+	input, err := reader.ReadString('\n')
+	if err != nil {
+		log.Fatal(err)
+	}
+	input = strings.TrimSpace(input)
+	number, err := strconv.ParseFloat(input, 64)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	sum += number
+
+	fmt.Print("Add more? [Y/n] ")
+	more, err = reader.ReadString('\n')
+	if err != nil {
+		log.Fatal(err)
+	}
+	more = strings.TrimSpace(more)
+
+	fmt.Println("Sum is", sum)
+}
+{% endhighlight %}
