--- a/solutions/ch02_01.md
+++ b/solutions/ch02_01.md
@@ -1,11 +1,11 @@
 ---
 layout: exercises
-title:  "Chapter 1: Solutions"
+title:  "Chapter 2: Solutions"
 ---
 
-## Chapter 1 - Syntax Basics
+## Chapter 2 - Conditionals and Loops
 
-### Exercise 2: Calling Methods
+### Exercise 1: Calling Methods
 
 The `strings` package has a `Builder` type that is used to build a long text string out of multiple shorter ones.
 
