--- a/exercises/ch03.md
+++ b/exercises/ch03.md
@@ -49,4 +49,39 @@ func main() {
 
 When you're ready, have a look at [our solution](/solutions/ch03_01.html).
 
-### Exercise 2: Coming soon!
+### Exercise 2: Return Values
+
+You're fed up with the neighborhood wildlife destroying your gardens. You have three rectangular garden plots that you need to surround with fencing:
+
+* An 8.2 by 10 meter plot
+* A 5 by 5.2 meter plot
+* A 6.2 by 4.5 meter plot
+
+You need to figure out how much fencing to buy. You'll need to calculate the perimeter (two times the length plus two times the width) for each of these plots, then add the three perimeters together to get the total length of fencing.
+
+Write a `perimeter` function that takes two `float64` parameters representing the length and width. `perimeter` should return a `float64` value representing the perimeter length.
+
+Then, in your `main` function, call `perimeter` three times to calculate perimeters for the plots of land above. Add the three perimeters together, and print the total.
+
+{% highlight go %}
+package main
+
+import "fmt"
+
+// YOUR CODE HERE: Write a "perimeter" function.
+
+func main() {
+	// YOUR CODE HERE: Call "perimeter" three times.
+	// Add the three return values together, and store the
+	// total in the "total" variable.
+	fmt.Println("You'll need", total, "meters of fencing")
+}
+{% endhighlight %}
+
+Output:
+
+``` text
+You'll need 78.6 meters of fencing
+```
+
+When you're ready, have a look at [our solution](/solutions/ch03_02.html).
