--- a/exercises/ch05.md
+++ b/exercises/ch05.md
@@ -3,7 +3,7 @@ layout: exercises
 title:  "Chapter 5: More Exercises"
 ---
 
-## Chapter 5 - Functions
+## Chapter 5 - Arrays
 
 ### Exercise 1: Accessing Arrays
 
