Improve Playground links

--- a/exercises/ch05.md
+++ b/exercises/ch05.md
@@ -54,7 +54,7 @@ Output:
 2 occurred 2 times
 ```
 
-<!-- You can try this on the [Go Playground](https://play.golang.org/p/T81IYPh-Avt). -->
+<!-- You can [try this on the Go Playground](https://play.golang.org/p/T81IYPh-Avt). -->
 
 **Extra credit:** Now do the same for *this* array!
 
