--- a/solutions/ch05_01.md
+++ b/solutions/ch05_01.md
@@ -45,7 +45,7 @@ func main() {
 }
 {% endhighlight %}
 
-<!-- You can try this on the [Go Playground](https://play.golang.org/p/puv5u_DXsAr). -->
+<!-- You can [try this on the Go Playground](https://play.golang.org/p/puv5u_DXsAr). -->
 
 Here's a solution that uses an array literal, and a loop that goes through each element index.
 
@@ -63,7 +63,7 @@ func main() {
 }
 {% endhighlight %}
 
-<!-- You can try this on the [Go Playground](https://play.golang.org/p/0zA9HSF-VGI). -->
+<!-- You can [try this on the Go Playground](https://play.golang.org/p/0zA9HSF-VGI). -->
 
 And here's a solution that uses a `for ... range` loop.
 
@@ -81,4 +81,4 @@ func main() {
 }
 {% endhighlight %}
 
-<!-- You can try this on the [Go Playground](https://play.golang.org/p/ginBpXXTpFt). -->
+<!-- You can [try this on the Go Playground](https://play.golang.org/p/ginBpXXTpFt). -->
