--- a/solutions/ch05_02.md
+++ b/solutions/ch05_02.md
@@ -40,7 +40,7 @@ func main() {
 }
 {% endhighlight %}
 
-<!-- You can try this on the [Go Playground](https://play.golang.org/p/7BEaDZ0G12M). -->
+<!-- You can [try this on the Go Playground](https://play.golang.org/p/7BEaDZ0G12M). -->
 
 Output:
 
