--- a/solutions/ch06_02.md
+++ b/solutions/ch06_02.md
@@ -1,45 +1,9 @@
 ---
 layout: exercises
-title:  "Chapter 6: More Exercises"
+title:  "Chapter 6: Solutions"
 ---
 
 ## Chapter 6 - Slices
-
-### Exercise 1: The Slice Operator
-
-Define a `printLines` function that takes a slice of strings as a parameter, and prints each element of that slice on a separate line.
-
-Then, in `main`, get a slice of the `daysOfWeek` array containing just the weekdays: "Monday", "Tuesday", "Wednesday", "Thursday", and "Friday". Pass that slice to `printLines`.
-
-{% highlight go %}
-package main
-
-import "fmt"
-
-// YOUR CODE HERE: Define a printLines function.
-
-func main() {
-	daysOfWeek := [7]string{"Sunday", "Monday", "Tuesday",
-		"Wednesday", "Thursday", "Friday", "Saturday"}
-	// YOUR CODE HERE: Get a slice containing just the
-	// weekdays.
-	// Pass that slice to printLines.
-}
-{% endhighlight %}
-
-<!-- You can [try this on the Go Playground](https://play.golang.org/p/7sbZHINyQmo). -->
-
-Output:
-
-``` text
-Monday
-Tuesday
-Wednesday
-Thursday
-Friday
-```
-
-When you're ready, have a look at [our solution](/solutions/ch06_01.html).
 
 ### Exercise 2: Appending to a Slice
 
@@ -47,17 +11,7 @@ The program below should ask the user to input several strings. When the user is
 
 Your task is to update the code in the `main` function to get it all working. Set up a variable with a slice of strings to hold the phrases the user enters. Add new phrases to the end of the slice. And call `strings.Join` to join the strings in the finished slice with commas.
 
-Sample output:
-
-``` text
-String to add: cashews
-Continue? [Y/n]: y
-String to add: peanuts
-Continue? [Y/n]: y
-String to add: almonds
-Continue? [Y/n]: n
-cashews, peanuts, almonds
-```
+### Solution
 
 {% highlight go %}
 package main
@@ -130,7 +84,7 @@ func main() {
 	more := true
 	// YOUR CODE HERE: Set up a slice to hold phrases the
 	// user enters.
-	
+	var phrases []string
 	// Loop until user chooses not to continue.
 	for more == true {
 		// Get the user's input.
@@ -141,15 +95,25 @@ func main() {
 		}
 		// YOUR CODE HERE: Add the user's input to the
 		// slice.
-		
+		phrases = append(phrases, input)
 		// Ask if the user wants to continue.
 		more = askToContinue()
 	}
 	// YOUR CODE HERE: Call strings.Join with your slice
 	// of strings, and the string ", " to join everything
 	// together.
-	
+	fmt.Println(strings.Join(phrases, ", "))
 }
 {% endhighlight %}
 
-Here's [our solution](/solutions/ch06_02.html).
+Sample output:
+
+``` text
+String to add: cashews
+Continue? [Y/n]: y
+String to add: peanuts
+Continue? [Y/n]: y
+String to add: almonds
+Continue? [Y/n]: n
+cashews, peanuts, almonds
+```
