Fix heading case

--- a/solutions/ch06_03.md
+++ b/solutions/ch06_03.md
@@ -5,7 +5,7 @@ title:  "Chapter 6: Solutions"
 
 ## Chapter 6 - Slices
 
-### Exercise 3: Command-line arguments
+### Exercise 3: Command-line Arguments
 
 CSV is a common file format used to represent spreadsheet data in plain-text files. Go includes [an `encoding/csv` package](https://golang.org/pkg/encoding/csv/) that can read this format.
 
