--- a/exercises/ch06.md
+++ b/exercises/ch06.md
@@ -154,7 +154,7 @@ func main() {
 
 Here's [our solution](/solutions/ch06_02.html).
 
-### Exercise 3: Command-line arguments
+### Exercise 3: Command-line Arguments
 
 CSV is a common file format used to represent spreadsheet data in plain-text files. Go includes [an `encoding/csv` package](https://golang.org/pkg/encoding/csv/) that can read this format.
 
