Fix exercise description

--- a/exercises/ch07.md
+++ b/exercises/ch07.md
@@ -7,7 +7,7 @@ title:  "Chapter 7: More Exercises"
 
 ### Exercise 1: Counting Occurrences of Strings
 
-In chapter 5, we asked you to count how many times the numbers 0, 1, and 2 occurred within an array. This time, your task is to count how many times letters occur within a slice.
+In the chapter 5 exercises, we asked you to count how many times the numbers 0, 1, and 2 occurred within an array. This time, your task is to count how many times letters occur within a slice.
 
 *Hint: You can set up a map with strings as its keys and integers as its values. The values can be used to keep track of the number of times each key string has occurred.*
 
