Add chapter 7 exercises

--- a/exercises/ch07.md
+++ b/exercises/ch07.md
@@ -32,3 +32,63 @@ func main() {
 {% endhighlight %}
 
 Here's [our solution](/solutions/ch07_01.html).
+
+### Exercise 2: Sorting Map Contents
+
+Here's a new `votes.txt` file. It's been updated to list candidate names in "last name, first name" order, and there are several more candidate names now.
+
+``` text
+Wilkins, Dennis
+Rodriquez, Jamie
+Hines, Domingo
+Wolfe, Kelly
+Carr, Darla
+Rodriquez, Jamie
+Wolfe, Kelly
+Wilkins, Dennis
+Carr, Darla
+Rodriquez, Jamie
+Hines, Domingo
+```
+
+Our vote counting program still works with this updated file, but we're really starting to wish the results were easier to read. Update the program to print the candidates in alphabetical order by name. You can use the `sort` package's `Strings` method to sort the candidate names.
+
+{% highlight go %}
+package main
+
+import (
+	"fmt"
+	"log"
+	"sort"
+	"github.com/headfirstgo/datafile"
+)
+
+func main() {
+	lines, err := datafile.GetStrings("votes.txt")
+	if err != nil {
+		log.Fatal(err)
+	}
+	counts := make(map[string]int)
+	for _, line := range lines {
+		counts[line]++
+	}
+	// YOUR CODE HERE: Build a slice containing all the
+	// key strings from the "counts" map.
+	// Call the sort.Strings method on your slice.
+	// Loop through the names in the sorted slice, and
+	// print the name and the corresponding count from
+	// the map.
+}
+{% endhighlight %}
+
+Output:
+
+``` text
+Votes for Carr, Darla: 2
+Votes for Hines, Domingo: 2
+Votes for Rodriquez, Jamie: 3
+Votes for Wilkins, Dennis: 2
+Votes for Wolfe, Kelly: 2
+```
+
+Here's [our solution](/solutions/ch07_02.html).
