Add struct pointer exercise

--- a/exercises/ch08.md
+++ b/exercises/ch08.md
@@ -35,4 +35,17 @@ Length: 4.2
 Width: 2.3
 ```
 
-Here's [our solution](/solutions/ch08_01.html).
+When you're ready, have a look at [our solution](/solutions/ch08_01.html).
+
+### Exercise 2: Modifying Structs from Functions
+
+All squares are rectangles, but not all rectangles are squares... Let's define a `makeSquare` function that takes a `rectangle` and "cuts it down" so that its longer sides are equal to its shorter sides.
+
+* If the `rectangle`'s `length` is greater than its `width`, set its `length` equal to its `width`.
+* Otherwise, set the `width` equal to the `length`.
+
+`makeSquare` won't return a value; it should modify the `rectangle` it receives (meaning it will need to accept a pointer to a `rectangle` and modify the value at that pointer).
+
+In `main`, create a couple different `rectangle` values, one where the `length` is greater and one where the `width` is greater, and try converting them to squares using `makeSquare`.
+
+Here's [our solution](/solutions/ch08_02.html).
