Add comments to solution

--- a/solutions/ch08_02.md
+++ b/solutions/ch08_02.md
@@ -33,7 +33,14 @@ func rectangleInfo(r rectangle) {
 	fmt.Println("Width:", r.width)
 }
 
+// Accepts a pointer to a rectangle rather than a
+// rectangle value, so that it can modify the original
+// value at the pointer.
 func makeSquare(r *rectangle) {
+	// Remember that the dot operator works the same
+	// with a pointer to a struct as it does with the
+	// actual struct. You don't have to explicitly
+	// write (*r).length or (*r).width.
 	if r.length > r.width {
 		r.length = r.width
 	} else {
@@ -47,14 +54,14 @@ func main() {
 	r.length = 4.2
 	r.width = 2.3
 	rectangleInfo(r)
-	makeSquare(&r)
+	makeSquare(&r) // Pass a pointer to makeSquare.
 	rectangleInfo(r)
 	// Make a rectangle that's wider than it is long.
 	var r2 rectangle
 	r2.length = 10
 	r2.width = 20
 	rectangleInfo(r2)
-	makeSquare(&r2)
+	makeSquare(&r2) // Pass a pointer to makeSquare.
 	rectangleInfo(r2)
 }
 {% endhighlight %}
