Add pointer receivers exercise

--- a/exercises/ch09.md
+++ b/exercises/ch09.md
@@ -44,3 +44,24 @@ Width: 2.3
 ```
 
 When you're ready, have a look at [our solution](/solutions/ch09_01.html).
+
+### Exercise 2: Pointer Receivers for Methods
+
+Now see if you can convert last chapter's `makeSquare` function to a method on the `rectangle` type. (That is, calling the `makeSquare` method on a `rectangle` value should convert that `rectangle` to a square.)
+
+Because `makeSquare` needs to modify its receiver, be sure the receiver parameter has a pointer type. And because both the `makeSquare` and `info` methods are on the same type, it would be a good idea to convert `info` to a pointer receiver as well.
+
+### Solution
+
+{% highlight go %}
+// Convert this function to a method on the "rectangle" type.
+func makeSquare(r *rectangle) {
+	if r.length > r.width {
+		r.length = r.width
+	} else {
+		r.width = r.length
+	}
+}
+{% endhighlight %}
+
+Here's [our solution](/solutions/ch09_02.html).
