--- a/exercises/ch11.md
+++ b/exercises/ch11.md
@@ -75,3 +75,66 @@ Compile Error:
 ```
 
 When you're ready, have a look at [our solution](/solutions/ch11_01.html).
+
+## Chapter 11 - Interfaces
+
+### Exercise 2: Type Assertions
+
+Here are updated `Fan` and `CoffeePot` types, both of which satisfy an `Appliance` interface. We've also added a `Use` method that accepts an `Appliance`. Currently, `Use` only calls the `TurnOn` method on the `Appliance`...
+
+Update `Use` so that it calls `Oscillate` on the `Appliance` if (and only if) it's a `Fan`. `Use` should also call `Brew` on the `Appliance` if (and only if) it's a `CoffeePot`.
+
+{% highlight go %}
+package main
+
+import "fmt"
+
+type Appliance interface {
+	TurnOn()
+}
+
+type Fan string
+
+func (f Fan) TurnOn() {
+	fmt.Println("Spinning")
+}
+func (f Fan) Oscillate() {
+	fmt.Println("Rotating on base")
+}
+
+type CoffeePot string
+
+func (c CoffeePot) TurnOn() {
+	fmt.Println("Powering up")
+}
+func (c CoffeePot) Brew() {
+	fmt.Println("Heating Up")
+}
+
+func Use(appliance Appliance) {
+	fmt.Println(appliance)
+	appliance.TurnOn()
+	// YOUR CODE HERE: If the appliance is a
+	// Fan, call its Oscillate method.
+	// If the appliance is a CoffeePot, call
+	// its Brew method.
+}
+
+func main() {
+	Use(Fan("Windco Breeze"))
+	Use(CoffeePot("LuxBrew"))
+}
+{% endhighlight %}
+
+Desired Output:
+
+``` text
+Windco Breeze
+Spinning
+Rotating on base
+LuxBrew
+Powering up
+Heating Up
+```
+
+Here's [our solution](/solutions/ch11_02.html).
