--- a/solutions/ch12_01.md
+++ b/solutions/ch12_01.md
@@ -3,7 +3,7 @@ layout: exercises
 title:  "Chapter 12: Solutions"
 ---
 
-## Chapter 12 - Interfaces
+## Chapter 12 - Recovering from Failure
 
 ### Exercise 1: `defer`
 
