Add panic/recover exercise

--- a/solutions/ch12_02.md
+++ b/solutions/ch12_02.md
@@ -1,67 +1,9 @@
 ---
 layout: exercises
-title:  "Chapter 12: More Exercises"
+title:  "Chapter 12: Solutions"
 ---
 
 ## Chapter 12 - Recovering from Failure
-
-### Exercise 1: `defer`
-
-We need to be sure our `Camp` function calls the `Fire` value's `Extinguish` method before the program exits. But right now, `Camp` is returning early due to an error, before `Extinguish` can be called.
-
-We don't want to leave a lit `Fire` unattended in the forest! Revise the `Camp` function so that `Extinguish` is always called, even if `Camp` returns early.
-
-{% highlight go %}
-package main
-
-import "fmt"
-
-type Fire struct {
-	lit bool
-}
-
-func (f Fire) Light() {
-	f.lit = true
-	fmt.Println("Fire lit:", f.lit)
-}
-func (f Fire) Extinguish() {
-	f.lit = false
-	fmt.Println("Fire lit:", f.lit)
-}
-
-func Camp() error {
-	var fire Fire
-	fire.Light()
-	return fmt.Errorf("spotted a bear")
-	fmt.Println("Toasting marshmallows")
-	fire.Extinguish()
-	return nil
-}
-
-func main() {
-	err := Camp()
-	if err != nil {
-		fmt.Println(err)
-	}
-}
-{% endhighlight %}
-
-Actual Output:
-
-``` text
-Fire lit: true
-Error: spotted a bear
-```
-
-Desired Output:
-
-``` text
-Fire lit: true
-Fire lit: false
-Error: spotted a bear
-```
-
-When you're ready, have a look at [our solution](/solutions/ch12_01.html).
 
 ### Exercise 2: `panic` and `recover`
 
@@ -79,9 +21,21 @@ import "fmt"
 func main() {
 	fmt.Println("a")
 	panic("oh no")
+	// This call never gets made.
 	fmt.Println("b")
 }
 {% endhighlight %}
+
+Output:
+
+``` text
+a
+panic: oh no
+
+goroutine 1 [running]:
+main.main()
+	/tmp/sandbox493149858/prog.go:7 +0xa0
+```
 
 #### Example 2
 
@@ -91,6 +45,8 @@ package main
 import "fmt"
 
 func myFunction() {
+	// Even though the next line panics, this call gets
+	// made when myFunction exits.
 	defer fmt.Println("b")
 	panic("oh no")
 }
@@ -101,6 +57,20 @@ func main() {
 }
 {% endhighlight %}
 
+Output:
+
+``` text
+a
+b
+panic: oh no
+
+goroutine 1 [running]:
+main.myFunction()
+	/tmp/sandbox836036355/prog.go:7 +0xa0
+main.main()
+	/tmp/sandbox836036355/prog.go:12 +0xa0
+```
+
 #### Example 3
 
 {% highlight go %}
@@ -110,6 +80,8 @@ import "fmt"
 
 func myFunction() {
 	panic("oh no")
+	// This call is never made because `myFunction`
+	// exits as soon as the program panics.
 	fmt.Println(recover())
 }
 
@@ -119,6 +91,21 @@ func main() {
 	fmt.Println("b")
 }
 {% endhighlight %}
+
+
+
+Output:
+
+``` text
+a
+panic: oh no
+
+goroutine 1 [running]:
+main.myFunction()
+	/tmp/sandbox950318916/prog.go:6 +0x40
+main.main()
+	/tmp/sandbox950318916/prog.go:12 +0xa0
+```
 
 #### Example 4
 
@@ -128,21 +115,37 @@ package main
 import "fmt"
 
 func otherFunction() {
+	// This runs when the deferred function call is made.
 	fmt.Println("c")
+	// This recovers from the panic and prints the panic
+	// message.
 	fmt.Println(recover())
 }
 
 func myFunction() {
+	// This call gets made when myFunction panics.
 	defer otherFunction()
 	panic("oh no")
+	// Execution does not resume here, because this
+	// function exited due to the panic.
 	fmt.Println("d")
 }
 
 func main() {
 	fmt.Println("a")
 	myFunction()
+	// Execution resumes here after recovering.
 	fmt.Println("b")
 }
 {% endhighlight %}
 
-Here are [the solutions](/solutions/ch12_02.html).
+Output:
+
+``` text
+a
+c
+oh no
+b
+```
+
+Because the program recovered from the panic, it doesn't exit early, and so no stack trace is printed.
