Add table-driven test exercise

--- a/exercises/ch14.md
+++ b/exercises/ch14.md
@@ -59,6 +59,7 @@ For now, you can use a failure message of `"didn't match expected value"` for ev
 Output:
 
 ``` text
+$ go test github.com/jaymcgavren/ordinals
 --- FAIL: TestThree (0.00s)
 	ordinals_test.go:19: didn't match expected value
 FAIL
@@ -86,6 +87,7 @@ Update your tests for the calls `Ordinal(1)`, `Ordinal(2)`, and `Ordinal(3)` to 
 Output:
 
 ``` text
+$ go test github.com/jaymcgavren/ordinals
 --- FAIL: TestThree (0.00s)
 	ordinals_test.go:31: Ordinal(3) = "3th", want "3rd"
 FAIL
@@ -93,3 +95,28 @@ FAIL	github.com/jaymcgavren/ordinals	0.007s
 ```
 
 Here's [our solution](/solutions/ch14_02.html).
+
+### Exercise 3: Table-Driven Tests
+
+Replace all your tests with a table-driven test:
+
+* Create a `testData` type with fields for the argument to pass to `Ordinal` and the return value you want.
+* Create a slice of `testData` values representing the various arguments you want to pass and the return values you expect to see.
+* Loop over each `testData` value in the slice:
+    * Pass the argument field from the `testData` to `Ordinal`, and record the return value you got.
+    * If the return value you got doesn't match the expected return value field from the `testData`, call `t.Errorf`.
+    * Use the same format for the test failure string that you used for your helper function from the previous exercise. (Once you're done, the helper function will be redundant, so you can delete it.)
+
+Output:
+
+``` text
+$ go test github.com/jaymcgavren/ordinals
+--- FAIL: TestThree (0.00s)
+	ordinals_test.go:31: Ordinal(3) = "3th", want "3rd"
+FAIL
+FAIL	github.com/jaymcgavren/ordinals	0.007s
+```
+
+Here's [our solution](/solutions/ch14_03.html).
+
+Play around! We encourage you to try changing the code in `Ordinal` to fix the broken test or to intentionally break other tests, and to add tests for additional arguments. You can also try creating your own package from scratch, and write tests for all its functions!
