Add query parameters exercise

--- a/exercises/ch15.md
+++ b/exercises/ch15.md
@@ -54,3 +54,62 @@ func main() {
 {% endhighlight %}
 
 When you're ready, have a look at [our solution](/solutions/ch15_01.html).
+
+### Exercise 2: Query Parameters
+
+URLs can include a "query" at the end with various parameters and corresponding values. For example:
+
+``` text
+http://example.com/?one=a&two=b
+```
+
+This query has two parameters. The `one` parameter has a value of `a`, and the `two` parameter has a value of `b`.
+
+We've set up a `getParameter` function for you, which can read the value of a query parameter. Here's how it works:
+
+* Every HTTP handler function receives a pointer to an [`http.Request` value](https://golang.org/pkg/net/http/#Request).
+* That `Request` has a `URL` field which holds a [`"net/url"` `URL` value](https://golang.org/pkg/net/url/#URL).
+* That `URL` value has [a `Query` method](https://golang.org/pkg/net/url/#URL.Query) which returns a map with the query parameters.
+
+Your task is to use `getParameter` in a web app. You'll be writing a request handler function that takes a query parameter and displays it as an HTML `<h1>` heading.
+
+* Set up a handler function that can be passed to http.HandleFunc (that is, it must accept http.ResponseWriter and *http.Request parameters).
+    * Within the function, call `getParameter` to get the value of the "text" parameter.
+    * Write the returned string out the the response in an <h1> HTML tag.
+* Within `main`:
+    * Set up your function to handle requests for the "/big" path.
+    * Then start an HTTP server on port 8080.
+
+This is a lot to do from memory; don't hesitate to look at prior examples as a guide!
+
+When you're done, start your app and try visiting these URLs:
+
+* [`http://localhost:8080/big?text=Hello`](http://localhost:8080/big?text=Hello)
+* [`http://localhost:8080/big?text=Head%20First%20Go`](http://localhost:8080/big?text=Head%20First%20Go)
+* [`http://localhost:8080/big?text=Your%20Name%20Here`](http://localhost:8080/big?text=Your%20Name%20Here)
+
+{% highlight go %}
+package main
+
+import (
+	"log"
+	"net/http"
+)
+
+// getParameter returns the first value associated with a
+// named query parameter from an http.Request.
+func getParameter(request *http.Request, parameterName string) string {
+	query := request.URL.Query()
+	return query[parameterName][0]
+}
+
+// YOUR CODE HERE: Set up a handler function.
+
+func main() {
+	// YOUR CODE HERE: Set up your function to handle
+	// requests for the "/big" path.
+	// Then start an HTTP server on port 8080.
+}
+{% endhighlight %}
+
+Here's [our solution](/solutions/ch15_02.html).
