--- a/solutions/ch16_02.md
+++ b/solutions/ch16_02.md
@@ -32,33 +32,6 @@ Output:
 ### Solution
 
 {% highlight go %}
----
-layout: exercises
-title:  "Chapter 16: Solutions"
----
-
-## Chapter 16 - HTML Templates
-
-### Exercise 2: An HTML Template
-
-Set the `textTemplate` variable so that the program will produce the output shown.
-
-Output:
-
-``` text
-- apples
-- oranges
-- pears
-- chicken
-- beef
-- lamb
-```
-
-### Solution
-
-`grocery.go`
-
-{% highlight go %}
 package main
 
 import (
@@ -97,7 +70,7 @@ func main() {
 
 `list.html`
 
-{% highlight go %}
+{% highlight html %}
 <html>
   <ul>
     {{range .}}
