Fix typos in instructions

--- a/exercises/ch16.md
+++ b/exercises/ch16.md
@@ -8,7 +8,7 @@ title:  "Chapter 16: More Exercises"
 ### Exercise 1: A Text Template
 
 We want to create a text template that will output a bulleted list (using simple dash characters as the bullets).
-Set the `textTemplate` variable so that the program will produce the output shown. Don't forget that you need a
+Set the `templateText` variable so that the program will produce the output shown. Don't forget that you need a
 newline character to make the output skip to the next line!
 
 {% highlight go %}
