--- a/solutions/ch16_01.md
+++ b/solutions/ch16_01.md
@@ -7,7 +7,7 @@ title:  "Chapter 16: Solutions"
 
 ### Exercise 1: A Text Template
 
-Set the `textTemplate` variable so that the program will produce the output shown.
+Set the `templateText` variable so that the program will produce the output shown.
 
 Output:
 
