Fix issue where Go template tags were being interpreted as Liquid

--- a/solutions/ch16_01.md
+++ b/solutions/ch16_01.md
@@ -23,6 +23,7 @@ Output:
 ### Solution
 
 {% highlight go %}
+{% raw %}
 package main
 
 import (
@@ -51,4 +52,5 @@ func main() {
 	executeTemplate(templateText,
 		[]string{"chicken", "beef", "lamb"})
 }
+{% endraw %}
 {% endhighlight %}
